[project]
name = "ppo"
version = "0.1.0"
description = "A package implementing Proximal Policy Optimization (PPO) for training and inference."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.0.0",
    "torch==2.7.1",
    "gymnasium[classic_control,other]==1.1.1",
    "tqdm==4.67.1",
    "tensorboard>=2.19.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"